--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -118,6 +118,18 @@ body {
     }
 }
 
+@keyframes moveInButton {
+    0% {
+        opacity: 0;
+        transform: translateY(50px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .btn:link,
 .btn:visited {
     text-transform: uppercase;
@@ -154,8 +166,19 @@ body {
     top: 0;
     left: 0;
     z-index: -1;
+    transition: all .4s;
 }
 
 .btn-white::after {
     background-color: #fff;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInButton 0.5s ease-out .75s;
+    animation-fill-mode: backwards;
 }
