--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -299,7 +299,10 @@ body {
     transform: translateX(-3rem) skewX(12deg);
     position: relative; }
   .story__img {
-    height: 100%; }
+    height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
+    transition: all .5s; }
   .story__text {
     transform: skewX(12deg); }
   .story__caption {
@@ -317,6 +320,9 @@ body {
   .story:hover .story__caption {
     opacity: 1;
     transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%); }
 
 .feature-box {
   background-color: rgba(255, 255, 255, 0.8);
