--- a/starter/sass/components/_button.scss
+++ b/starter/sass/components/_button.scss
@@ -74,6 +74,7 @@
             display: inline-block;
             text-decoration: none;
             border-bottom: 1px solid $color-primary;
+            border-radius: 0;
             padding: 3px;
             transition-property: all .2s;
         }
