--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -139,6 +139,19 @@ body {
   .form__input:focus:invalid {
     border-bottom: 3px solid #ff7730; }
 
+.form__label {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-top: .7rem;
+  display: block;
+  transition: all .3s; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
+
 .bg-video {
   position: absolute;
   top: 0;
