--- a/starter/sass/main.scss
+++ b/starter/sass/main.scss
@@ -15,6 +15,7 @@
 @import "components/feature-box";
 @import "components/composition";
 
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 
