--- a/starter/sass/abstracts/_mixins.scss
+++ b/starter/sass/abstracts/_mixins.scss
@@ -12,3 +12,46 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+
+// MEDIA QUERY MANAGER
+
+/* 
+0 - 600px: Phone
+600 - 900px: Tablet Portrait
+900 - 1200px: Tablet Landscape
+1200 - 1800px: Normal Styles Apply
+1800 + : Big Desktop
+
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) {
+            @content
+        };
+    }
+
+    @if $breakpoint == tab-port {
+        @media (max-width: 56.25em) {
+            @content
+        };
+    }
+
+    @if $breakpoint == tab-land {
+        @media (max-width: 75em) {
+            @content
+        };
+    }
+
+    @if $breakpoint == big-desktop {
+        @media (min-width: 112.5em) {
+            @content
+        };
+    }
+}
