--- a/starter/sass/abstracts/_mixins.scss
+++ b/starter/sass/abstracts/_mixins.scss
@@ -27,6 +27,9 @@ $breakpoint argument choices:
 - phone
 - tab-port
 - tab-land
+
+ORDER: base + typography > general layout + grid > page layouts > components
+
 - big-desktop
 */
 
