--- a/starter/sass/layout/_navigation.scss
+++ b/starter/sass/layout/_navigation.scss
@@ -15,6 +15,17 @@
         box-shadow: 0 1rem 4rem rgba($color-black, .1);
         text-align: center;
         cursor: pointer;
+
+
+        @include respond(tab-port) {
+            right: 4rem;
+            top: 4rem;
+        }
+        
+        @include respond(phone) {
+            right: 3rem;
+            top: 3rem;
+        }
     }
 
     &__background {
@@ -28,7 +39,15 @@
         z-index: 1000;
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
 
-       // transform: scale(80);
+       @include respond(tab-port) {
+        right: 4rem;
+        top: 4rem;
+        }
+
+        @include respond(phone) {
+            right: 3rem;
+            top: 3rem;
+        }
     }
 
     &__nav {
