--- a/starter/sass/layout/_header.scss
+++ b/starter/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    height: 95vh;
+    height: 85vh;
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.801),
@@ -8,16 +8,21 @@
     background-size: cover;
     background-position: top;
     position: relative;
-    -webikit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+
+    @supports(clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+        height: 95vh;
+    }
 
     @media (min-resolution: 192dpi) and (min-width: 37.5em),
-    (min-width: 125em) {
-        background-image: linear-gradient(
-            to right bottom,
-            rgba($color-secondary-light, 0.801),
-            rgba($color-secondary-dark, 0.801)),
-            url(../img/hero.jpg);
+            (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+            (min-width: 125em) {
+                background-image: linear-gradient(
+                    to right bottom,
+                    rgba($color-primary-light, 0.801),
+                    rgba($color-primary-dark, 0.801)),
+                    url(../img/hero.jpg);
     }
 
     @include respond(phone) {
